e0018925199f541b0819c6e4da691baa293e2c4f/Set-Tactician-Benchmark-60./opam-err.log
  Running command git clone --filter=blob:none --quiet https://github.com/IBM/graph2tac.git /tmp/pip-req-build-i4pjmkmd
  Running command git rev-parse -q --verify 'sha^41b48617b6f43a4f2bb1dd14a88a5623f96671b7'
  Running command git fetch -q https://github.com/IBM/graph2tac.git 41b48617b6f43a4f2bb1dd14a88a5623f96671b7
  Running command git checkout -q 41b48617b6f43a4f2bb1dd14a88a5623f96671b7
  DEPRECATION: graph2tac is being installed using the legacy 'setup.py install' method, because it does not have a 'pyproject.toml' and the 'wheel' package is not installed. pip 23.1 will enforce this behaviour change. A possible replacement is to enable the '--use-pep517' option. Discussion can be found at https://github.com/pypa/pip/issues/8559
  error: subprocess-exited-with-error
  
  × Running setup.py install for graph2tac did not run successfully.
  │ exit code: 1
  ╰─> [103 lines of output]
      /tmp/tactician.tmp.A15fYd/target-source/venv/lib/python3.10/site-packages/setuptools/installer.py:27: SetuptoolsDeprecationWarning: setuptools.installer is deprecated. Requirements should be satisfied by a PEP 517 installer.
        warnings.warn(
      running install
      /tmp/tactician.tmp.A15fYd/target-source/venv/lib/python3.10/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
        warnings.warn(
      running build
      running build_py
      creating build
      creating build/lib.linux-x86_64-cpython-310
      creating build/lib.linux-x86_64-cpython-310/graph2tac
      copying graph2tac/__init__.py -> build/lib.linux-x86_64-cpython-310/graph2tac
      copying graph2tac/predict.py -> build/lib.linux-x86_64-cpython-310/graph2tac
      copying graph2tac/common.py -> build/lib.linux-x86_64-cpython-310/graph2tac
      copying graph2tac/hash.py -> build/lib.linux-x86_64-cpython-310/graph2tac
      creating build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/datatypes.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/__init__.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/predict.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/train.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/model_params.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/stop_watch.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/graph_nn_def_batch.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/graph_nn_batch.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/model.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/batches.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/graph_nn.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      copying graph2tac/tf2/segments.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tf2
      creating build/lib.linux-x86_64-cpython-310/graph2tac/loader
      copying graph2tac/loader/unpack.py -> build/lib.linux-x86_64-cpython-310/graph2tac/loader
      copying graph2tac/loader/__init__.py -> build/lib.linux-x86_64-cpython-310/graph2tac/loader
      copying graph2tac/loader/py_predict_server.py -> build/lib.linux-x86_64-cpython-310/graph2tac/loader
      copying graph2tac/loader/data_server.py -> build/lib.linux-x86_64-cpython-310/graph2tac/loader
      copying graph2tac/loader/data_classes.py -> build/lib.linux-x86_64-cpython-310/graph2tac/loader
      copying graph2tac/loader/hmodel.py -> build/lib.linux-x86_64-cpython-310/graph2tac/loader
      copying graph2tac/loader/predict_server.py -> build/lib.linux-x86_64-cpython-310/graph2tac/loader
      copying graph2tac/loader/helpers.py -> build/lib.linux-x86_64-cpython-310/graph2tac/loader
      copying graph2tac/loader/py_data_server.py -> build/lib.linux-x86_64-cpython-310/graph2tac/loader
      creating build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      copying graph2tac/tfgnn/dataset.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      copying graph2tac/tfgnn/__init__.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      copying graph2tac/tfgnn/tasks.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      copying graph2tac/tfgnn/predict.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      copying graph2tac/tfgnn/graph_schema.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      copying graph2tac/tfgnn/models.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      copying graph2tac/tfgnn/train.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      copying graph2tac/tfgnn/plot_predict_graphs.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      copying graph2tac/tfgnn/metrics.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      copying graph2tac/tfgnn/train_utils.py -> build/lib.linux-x86_64-cpython-310/graph2tac/tfgnn
      running egg_info
      creating graph2tac.egg-info
      writing graph2tac.egg-info/PKG-INFO
      writing dependency_links to graph2tac.egg-info/dependency_links.txt
      writing entry points to graph2tac.egg-info/entry_points.txt
      writing requirements to graph2tac.egg-info/requires.txt
      writing top-level names to graph2tac.egg-info/top_level.txt
      writing manifest file 'graph2tac.egg-info/SOURCES.txt'
      reading manifest file 'graph2tac.egg-info/SOURCES.txt'
      adding license file 'LICENSE'
      writing manifest file 'graph2tac.egg-info/SOURCES.txt'
      /tmp/tactician.tmp.A15fYd/target-source/venv/lib/python3.10/site-packages/setuptools/command/build_py.py:202: SetuptoolsDeprecationWarning:     Installing 'graph2tac.loader.clib' as data is deprecated, please list it in `packages`.
          !!
      
      
          ############################
          # Package would be ignored #
          ############################
          Python recognizes 'graph2tac.loader.clib' as an importable package,
          but it is not listed in the `packages` configuration of setuptools.
      
          'graph2tac.loader.clib' has been automatically added to the distribution only
          because it may contain data files, but this behavior is likely to change
          in future versions of setuptools (and therefore is considered deprecated).
      
          Please make sure that 'graph2tac.loader.clib' is included as a package by using
          the `packages` configuration field or the proper discovery methods
          (for example by using `find_namespace_packages(...)`/`find_namespace:`
          instead of `find_packages(...)`/`find:`).
      
          You can read more about "package discovery" and "data files" on setuptools
          documentation page.
      
      
      !!
      
        check.warn(importable)
      creating build/lib.linux-x86_64-cpython-310/graph2tac/loader/clib
      copying graph2tac/loader/clib/graph_api_v13.capnp -> build/lib.linux-x86_64-cpython-310/graph2tac/loader/clib
      copying graph2tac/loader/clib/loader.cpp -> build/lib.linux-x86_64-cpython-310/graph2tac/loader/clib
      running build_ext
      Compiling .capnp files
      kj/filesystem-disk-unix.c++:1703: warning: PWD environment variable doesn't match current directory; pwd = /tmp/tactician.tmp.A15fYd/target-source
      kj/filesystem-disk-unix.c++:1703: warning: PWD environment variable doesn't match current directory; pwd = /tmp/tactician.tmp.A15fYd/target-source
      building 'graph2tac.loader.clib.loader' extension
      creating build/temp.linux-x86_64-cpython-310
      creating build/temp.linux-x86_64-cpython-310/graph2tac
      creating build/temp.linux-x86_64-cpython-310/graph2tac/loader
      creating build/temp.linux-x86_64-cpython-310/graph2tac/loader/clib
      gcc -pthread -B /dccstor/mathzero/model_runs/runs/2023-01-28_B_fix_benchmark/workdir/benchmark/venv/compiler_compat -Wno-unused-result -Wsign-compare -DNDEBUG -fwrapv -O2 -Wall -fPIC -O2 -isystem /dccstor/mathzero/model_runs/runs/2023-01-28_B_fix_benchmark/workdir/benchmark/venv/include -fPIC -O2 -isystem /dccstor/mathzero/model_runs/runs/2023-01-28_B_fix_benchmark/workdir/benchmark/venv/include -fPIC -I/tmp/tactician.tmp.A15fYd/target-source/venv/lib/python3.10/site-packages/numpy/core/include -I/tmp/tactician.tmp.A15fYd/target-source/venv/include -I/dccstor/mathzero/model_runs/runs/2023-01-28_B_fix_benchmark/workdir/benchmark/venv/include/python3.10 -c graph2tac/loader/clib/graph_api_v13.capnp.cpp -o build/temp.linux-x86_64-cpython-310/graph2tac/loader/clib/graph_api_v13.capnp.o -std=c++17 -O3 -I/opt/local/include -DCAPNP_V=13
      In file included from graph2tac/loader/clib/graph_api_v13.capnp.cpp:4:
      graph2tac/loader/clib/graph_api_v13.capnp.h:13:2: error: #error "Version mismatch between generated code and library headers.  You must use the same version of the Cap'n Proto compiler and library."
         13 | #error "Version mismatch between generated code and library headers.  You must use the same version of the Cap'n Proto compiler and library."
            |  ^~~~~
      error: command '/opt/share/gcc-10.1.0/x86_64/bin/gcc' failed with exit code 1
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
error: legacy-install-failure

× Encountered error while trying to install package.
╰─> graph2tac

note: This is an issue with the package mentioned above, not pip.
hint: See above for output from the failure.
